# yew-9bsk

yew-app/: .gitignore  Cargo.toml  index.html  index.scss  install.sh  manifest.json  service-worker.js
yew-app/src/: main.rs  scorer.rs
