[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# this is the development version of Yew
yew = { version = "^0.20", features = ["csr"] }
#gloo = "0.10"
js-sys = "0.3"
wasm-bindgen = "0.2"